Quick fix keeping long data from overflowing in hitlist

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -255,7 +255,7 @@ section.result .excerpt label{background:#f6f3ee url(/static/i/pat1.png);padding
 
 section.result .highlight{padding:0 2px;background:rgba(40,180,146,.4);}
 
-/* frontpage 98 */
+/* frontpage */
 
 section.dash{border-top: 5px solid #999;position:relative;}
 section.dash .circle{width:38px;height:38px;display:block;position:absolute;left:50%;margin-left:-19px;top:-21px;
@@ -491,6 +491,7 @@ label .lbl{display:block;font-size:12px;color:#1a8f72;margin-top:2px;line-height
 
 .holdings .lbl {color:#683568;}
 
+.result label{overflow:hidden;text-overflow:ellipsis;}
 
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     body label select{
